fix: correct header navigation alignment

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,6 @@ header {
 }
 
 nav {
-    flex-grow: 1;
 }
 
 nav ul {
